[package]
name = "owo-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "make your logs more owo"
repository = "https://github.com/DJSdev/owo-rs"
readme = "README.md"
keywords = ["owo", "log", "funny", "meme", "library"]

[lib]
name = "owo"
path = "src/lib.rs"

[dependencies]
rand = "0.9.0"
